k8s/flux/clusters/tal-clu-1/infra/storage/minio-tenant/main/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: main-console-http
  namespace: minio-tenant
spec:
  entryPoints: ["web"]
  routes:
  - match: Host(`main.minio.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: traefik
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: main-console-https
  namespace: minio-tenant
spec:
  entryPoints: ["websecure"]
  routes:
  - match: Host(`main.minio.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: main-console
      port: 9090
      sticky:
        cookie:
          name: traefik
          secure: true
          httpOnly: true
          sameSite: lax
  tls:
    secretName: main-ingress-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: main-api-http
  namespace: minio-tenant
spec:
  entryPoints: ["web"]
  routes:
  - match: Host(`api.main.minio.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: traefik
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: main-api-https
  namespace: minio-tenant
spec:
  entryPoints: ["websecure"]
  routes:
  - match: Host(`api.main.minio.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: main-hl
      port: 9000
      sticky:
        cookie:
          name: traefik
          secure: true
          httpOnly: true
          sameSite: lax
  tls:
    secretName: main-ingress-tls
